fix app layout overflow

--- a/src/layouts/app-layout/app-layout.module.css
+++ b/src/layouts/app-layout/app-layout.module.css
@@ -2,4 +2,10 @@
   display: flex;
   flex-direction: row;
   position: relative;
+  overflow: hidden;
+  height: 100vh;
+}
+
+.main {
+  overflow-y: auto;
 }
